--- a/SimpleNote/Views/Note/Index.cshtml
+++ b/SimpleNote/Views/Note/Index.cshtml
@@ -10,36 +10,42 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NoteId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedUtc)
-        </th>
-        <th></th>
-    </tr>
+	<tr>
+		<th>
+			@Html.DisplayNameFor(model => model.NoteId)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.Title)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.IsStarred)
+		</th>
+		<th>
+			@Html.DisplayNameFor(model => model.CreatedUtc)
+		</th>
+		<th></th>
+	</tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NoteId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedUtc)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.NoteId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.NoteId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.NoteId })
-        </td>
-    </tr>
+<tr>
+	<td>
+		@Html.DisplayFor(modelItem => item.NoteId)
+	</td>
+	<td>
+		@Html.DisplayFor(modelItem => item.Title)
+	</td>
+	<td>
+	@Html.DisplayFor(modelItem => item.IsStarred, new { Id = item.NoteId })
+	</td>
+	<td>
+		@Html.DisplayFor(modelItem => item.CreatedUtc)
+	</td>
+	<td>
+		@Html.ActionLink("Edit", "Edit", new { id = item.NoteId }) |
+		@Html.ActionLink("Details", "Details", new { id = item.NoteId }) |
+		@Html.ActionLink("Delete", "Delete", new { id = item.NoteId })
+	</td>
+</tr>
 }
 
 </table>
