--- a/SimpleNote/Views/Note/Index.cshtml
+++ b/SimpleNote/Views/Note/Index.cshtml
@@ -47,5 +47,32 @@
 	</td>
 </tr>
 }
-
 </table>
+
+@section scripts {
+	<script language="javascript" type="text/javascript">
+		$(document).ready(function () {
+			$("i[data-toggle='star']")
+				.css({ "cursor": "pointer" })
+				.click(function (e) {
+					var target = $(e.target);
+					var noteId = target.attr("data-id");
+					var starSet = target.hasClass("glyphicon-star");
+
+					$.ajax({
+						method: starSet ? "Delete" : "PUT",
+						url: "/api/note/" + noteId + "/star",
+						data: null
+					})
+						.done(function (r) {
+							target.removeClass();
+							target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" :
+								"glyphicon-star"));
+						})
+						.fail(function (r) {
+							alert("Failed to change star status");
+						});
+				});
+		});
+	</script>
+}
